--- a/.env.example
+++ b/.env.example
@@ -1,24 +1,11 @@
-# Since the ".env" file is gitignored, you can use the ".env.example" file to
-# build a new ".env" file when you clone the repo. Keep this file up-to-date
-# when you add new variables to `.env`.
-
-# This file will be committed to version control, so make sure not to have any
-# secrets in it. If you are cloning this repo, create a copy of this file named
-# ".env" and populate it with your secrets.
-
-# When adding additional environment variables, the schema in "/src/env.js"
-# should be updated accordingly.
-
-# Next Auth
-# You can generate a new secret on the command line with:
-# npx auth secret
-# https://next-auth.js.org/configuration/options#secret
-AUTH_SECRET=""
-
-# Next Auth Discord Provider
-AUTH_DISCORD_ID=""
-AUTH_DISCORD_SECRET=""
-
-# Prisma
-# https://www.prisma.io/docs/reference/database-reference/connection-urls#env
-DATABASE_URL="file:./db.sqlite"
+AUTH_SECRET="your_auth_secret_here"
+AUTH_GOOGLE_ID="your_google_id_here"
+AUTH_GOOGLE_SECRET="your_google_secret_here"
+NEXT_PUBLIC_FIREBASE_API_KEY="your_firebase_api_key_here"
+NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN="your_firebase_auth_domain_here"
+NEXT_PUBLIC_FIREBASE_PROJECT_ID="your_firebase_project_id_here"
+NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET="your_firebase_storage_bucket_here"
+NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID="your_firebase_messaging_sender_id_here"
+NEXT_PUBLIC_FIREBASE_APP_ID="your_firebase_app_id_here"
+AUTH_TRUST_HOST="true_or_false"
+AUTH_URL="your_auth_url_here"
